<resources>
    <string name="app_name">MyMoney</string>
    <string name="enter_amount">Введите сумму</string>
    <string name="title_activity_finance">FinanceActivity</string>
    <string name="title_activity_statistic">StatisticActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="edit_amount">Введите сумму:</string>
    <string name="title_activity_costs">CostsActivity</string>
    <string name="business">Бизнес</string>
    <string name="medical">Медицина</string>
    <string name="food">Питание</string>
    <string name="cloches">Одежда</string>
    <string name="hygiene">Гигиена</string>
    <string name="sport">Спорт</string>
    <string name="bar">Бары и Кафе</string>
    <string name="title_activity_plans">PlansActivity</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="title_activity_costs2">Costs2Activity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gifts">Подарки</string>
    <string name="title_activity_editing_income">EditingIncomeActivity</string>
    <string name="title_activity_editing_spending">EditingSpendingActivity</string>
    <string name="title_activity_editinig_finance_obj">EditinigFinanceObjActivity</string>

    <string name="title_activity_editing_one_obj">EditingOneObjActivity</string>
    <string name="info_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"
    </string>

</resources>
