<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_food"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/food"
        android:text="@string/food"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_makeGift"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/gift"
        android:text="@string/gifts"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_cloches"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/trousers"
        android:text="@string/cloches"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_hygiene"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/shower"
        android:text="@string/hygiene"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_medical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/medical"
        android:text="@string/medical"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_sport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/sport"
        android:text="@string/sport"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/bar"
        android:text="@string/bar"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textSize="20sp" />
</LinearLayout>